# esp32-camera-sensor

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  websocket-esp.py
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/camera/: app_camera.c  app_camera.h  camera_config.h  motion.c  motion.h
main/display/: app_display.c  app_display.h  lvgl_demo_ui.c
main/html_page/: index.html  table.html
main/html_page/scripts/: index.js
main/http_server/: app_httpserver.c  app_httpserver.h  app_wifi.c  app_wifi.h
py-script/: main.py
